--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "InfiniDraw",
+    "name": "InfiniDraw Expo",
     "slug": "InfiniDrawExpo",
     "privacy": "public",
     "sdkVersion": "32.0.0",
@@ -24,6 +24,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "Universal svg drawing with pan and zoom. Builds on Next.js and react-native-web for the web version, and react-native for native apps.\nExpo version of https://github.com/msand/InfiniDraw/\n",
+    "githubUrl": "https://github.com/msand/InfiniDrawExpo"
   }
 }
