--- a/package.json
+++ b/package.json
@@ -7,28 +7,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "apollo-boost": "0.1.27",
-    "apollo-cache-inmemory": "1.4.2",
-    "apollo-client": "^2.4.12",
-    "apollo-link": "1.2.8",
-    "apollo-link-error": "1.1.7",
-    "apollo-link-http": "1.5.11",
-    "apollo-link-ws": "1.0.14",
-    "apollo-utilities": "^1.1.2",
-    "expo": "^32.0.0",
-    "graphql": "^14.0.0",
-    "graphql-tag": "2.10.1",
+    "apollo-boost": "0.4.7",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "1.2.13",
+    "apollo-link-error": "1.1.12",
+    "apollo-link-http": "1.5.16",
+    "apollo-link-ws": "1.0.19",
+    "apollo-utilities": "^1.3.3",
+    "expo": "^36.0.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "2.10.3",
     "isomorphic-unfetch": "3.0.0",
-    "prop-types": "^15.7.0",
-    "react": "16.5.0",
-    "react-apollo": "2.2.2",
-    "react-native": "0.59.0",
-    "subscriptions-transport-ws": "^0.9.0",
+    "prop-types": "^15.7.2",
+    "react": "16.9.0",
+    "react-apollo": "3.1.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-svg": "9.13.3",
+    "recompose": "^0.30.0",
+    "subscriptions-transport-ws": "^0.9.16",
     "tinycolor2": "1.4.1",
     "zoomable-svg": "4.0.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^8.0.0"
   },
   "private": true
 }
